# plurality

./: CMakeLists.txt  README
editor/: editor.py
examples/pong/: out.json
examples/pong/game/: game.json
examples/pong/src/pong/: ball.go  main.go  paddle1.go  paddle2.go
games/: game.json
go/src/plurality/: cameracomponent.go  components.go  graphics.go  hellocomponent.go  input.go  mesh.go  plularity.go  rectangle.go  time.go  transform.go
share/: shader.frag  shader.vert
src/: main.cpp
src/components/: HelloComponent.hpp
src/engine/: Component.hpp  GameObject.hpp  Main.cpp
