cmake_minimum_required (VERSION 2.6)
project (plurality)
list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Wall")
find_library(m REQUIRED)
find_library(GL REQUIRED)
find_package(SDL REQUIRED)
find_package(SDL_ttf REQUIRED)
find_package(SDL_image REQUIRED)
include_directories(${SDL_INCLUDE_DIR})
add_executable(plurality src/main.cpp)
target_link_libraries(plurality ${M_LIB} SDL SDL_ttf SDL_image GL jsoncpp)
